2008-11-23	Jannis Pohlmann <jannis@xfce.org>

	* exo-helper/main.c (main): Stop startup notification once the plug is
	  created and the dialog content has been moved into the plug.

2008-11-22	Nick Schermer <nick@xfce.org>

	* exo-desktop-item-edit/main.c, exo-open/main.c, exo-mount/main.c
	  exo-csource/main.c, exo-mount-notify/main.c: Use -V for --version.
	* Manually update po files and regenerate them. 

2008-11-20	Jannis Pohlmann <jannis@xfce.org>

	* exo/exo-url.c (_exo_url_to_local_path, exo_url_show_on_screen): 
	  Modify _exo_url_to_local_path() so that it converts file:// URIs to
	  paths, does not touch absolute paths and converts relative paths to
	  absolute paths only if they exist in the local filesystem. Set 
	  relative paths to NULL otherwise. 
	  Replace the two regular expression for browser URIs by a more 
	  generic one and try to open URIs in the following order: file 
	  manager, email client and web browser as a last option.
	  Alltogether this should fix bug #4627.

2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update NEWS file for the upcoming beta2 release.

2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* exo/exo-icon-view.c: Add hack for drawing the background of text 
	  renderers inside the icon view. GtkIconView uses a similar hack, but
	  this should really be fixed in GtkCellRendererText.

2008-11-10	Jannis Pohlmann <jannis@xfce.org>

	* exo/exo-icon-view.c: Revert accidently committed painting code.

2008-11-10	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in, exo/exo-md5.c: Get rid of external MD5 functions.

2008-11-06	Brian Tarricone <bjt23@cornell.edu>

	* exo-helper/main.c: Fix compile against glib < 2.14.

2008-11-03	Jannis Pohlmann <jannis@xfce.org>

	* exo/exo-url.c: Split up assignment and conditional into separate 
	  lines to make the code more readable.

2008-11-03	Jannis Pohlmann <jannis@xfce.org>

	* exo/exo-url.c: Check whether the given URL can be transformed into