@@ -8,8 +8,7 @@ Categories=X-XFCE;Settings;DesktopSettings;X-XfceSettingsDialog;
 OnlyShowIn=XFCE;
 Terminal=false
 StartupNotify=true
-_GenericName=Preferred Applications
-_Name=Xfce 4 Preferred Applications
+_Name=Preferred Applications
 _Comment=Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)
 X-XfcePluggable=true
 X-XfceHelpFile=exo-preferred-applications.html
